@@ -33,6 +33,10 @@ export(anova.gam, bam, bam.update, concurvity, cSplineDes,
        qq.gam,
        residuals.gam,rig,rTweedie, s,
        slanczos,
+       smooth2random,smooth2random.mgcv.smooth,
+       smooth2random.sf.interaction,
+       smooth2random.tensor.smooth,
+       smooth2random.t2.smooth,
        smoothCon,smooth.construct,smooth.construct2,
        smooth.construct.cc.smooth.spec,
        smooth.construct.cp.smooth.spec,
